<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wau</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="action_settings">Settings</string>
    <string name="parse_app_id">changeme</string>
    <string name="parse_client_key">changeme</string>
    <string name="label_field_name">Name</string>
    <string name="label_field_phone">Mobile Number</string>
    <string name="label_field_username">Username</string>
    <string name="label_field_password">Password</string>
    <string name="label_button_login">Log In</string>
    <string name="label_button_signup">Sign Up</string>
    <string name="label_menu_logout">Log Out</string>
    <string name="label_menu_edit_friends">Edit Friends</string>
    <string name="title_section1">Nearby</string>
    <string name="title_section2">Map</string>
    <string name="title_section3">Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="fragment_label_no_friends">You have no friends yet :(</string>
    <string name="fragment_label_no_pictures">There are no pictures near this location.\nUpload one!</string>
    <string name="menu_label_camera">Camera</string>
    <string name="error_general">Sorry, there was an error!</string>
    <string name="alert_upload_success">Upload Success!</string>
    <string name="alert_welcome">Welcome!</string>
    <string name="alert_invalid_credentials">Invalid credentials</string>
    <string-array name="camera_choices">
        <item>Picture</item>
        <item>Video</item>
    </string-array>
    <color name="color_text_secondary">#696969</color>

    <string name="text_sharing_location">Sharing location&#8230;Tap to cancel</string>
    <string name="text_asking_location">Asking for your location&#8230;Tap to allow</string>
    <string name="text_where_are_u"></string>
    <string name="text_request_pending">Request pending&#8230;</string>
    <string name="text_friend_request"></string>
    <string name="text_friend_added">Added me</string>

</resources>
